--- a/frontend-webpack/Dockerfile
+++ b/frontend-webpack/Dockerfile
@@ -13,5 +13,8 @@ ENV CONTENT_ROOT /srv
 ENV PROXY_API_HOST https://swapi.co/api/
 ENV PROXY_BFF_HOST http://bff:3000/
 
+# for debugging purposes
+RUN apk add --update-cache --upgrade curl
+
 COPY --from=build /build/Caddyfile /etc/Caddyfile
 COPY --from=build /build/dist /srv
